<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.mainActivity.home.HomeFragment">

    <com.example.myapplication.utils.MyScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:id="@+id/retryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_bg_12dp"
                android:backgroundTint="@color/bgPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/unknown_issue"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/retryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"

                    android:background="@drawable/rounded_bg_12dp"
                    android:text="@string/retry"
                    android:textColor="@color/acPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cocktailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bg_12dp"
                    android:backgroundTint="@color/bgPrimary"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/deleteCocktail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cropToPadding="true"
                        android:scaleType="fitCenter" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bg_12dp"
                    android:backgroundTint="@color/bgPrimary"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/cocktailName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cocktail_name" />

                    <TextView
                        android:id="@+id/cocktailCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cocktail_category" />

                    <TextView
                        android:id="@+id/cocktailType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cocktail_type" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_bg_12dp"
                    android:backgroundTint="@color/bgPrimary"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avd_heart_empty" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <TextView
                    android:id="@+id/cocktailIngridients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_bg_12dp"
                    android:backgroundTint="@color/bgPrimary"
                    android:padding="20dp" />

            </LinearLayout>
        </LinearLayout>

    </com.example.myapplication.utils.MyScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>